[gd_scene load_steps=18 format=2]

[ext_resource path="res://Characters/Klex/platformChar_idle.png" type="Texture" id=1]
[ext_resource path="res://Characters/Klex/platformChar_jump.png" type="Texture" id=2]
[ext_resource path="res://Characters/Klex/platformChar_climb1.png" type="Texture" id=3]
[ext_resource path="res://Characters/Klex/platformChar_climb2.png" type="Texture" id=4]
[ext_resource path="res://Characters/Klex/platformChar_walk1.png" type="Texture" id=5]
[ext_resource path="res://Characters/Klex/platformChar_walk2.png" type="Texture" id=6]
[ext_resource path="res://Characters/Klex/Klex.gd" type="Script" id=7]
[ext_resource path="res://Characters/Klex/platformChar_duck.png" type="Texture" id=8]
[ext_resource path="res://Characters/Klex/jump.ogg" type="AudioStream" id=9]
[ext_resource path="res://Interface/BatteryLevel/BatteryLevel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Misc/ScreenLight/ScreenLight.tscn" type="PackedScene" id=11]
[ext_resource path="res://Misc/ScreenLight/Light512x512.png" type="Texture" id=12]
[ext_resource path="res://Characters/Klex/hurt.ogg" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "climb",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.2 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "poisoned"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 3, 3.3, 3.4, 3.5, 3.9, 4, 4.1, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0753725, 1, 0.0599999, 1 ), Color( 0.0502483, 1, 0.0399999, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0251241, 1, 0.02, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Klex" type="KinematicBody2D"]
scale = Vector2( 0.9, 0.9 )
collision_mask = 14
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
shape = SubResource( 2 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="BatteryLevel" parent="." instance=ExtResource( 10 )]
margin_left = -29.1352
margin_top = -37.0812
margin_right = -29.1352
margin_bottom = -37.0812
rect_scale = Vector2( 0.1, 0.1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 3 )
anims/poisoned = SubResource( 4 )

[node name="ScreenLight" parent="." instance=ExtResource( 11 )]
visible = false
texture = ExtResource( 12 )

[node name="PoisonTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
